[gd_scene load_steps=10 format=3 uid="uid://b64qqrdty2tul"]

[ext_resource type="Script" uid="uid://x52vviieyt3e" path="res://UserInterface/level_up_choice.gd" id="1_g6gwe"]
[ext_resource type="Texture2D" uid="uid://dxtnpxpvlwd06" path="res://UserInterface/window.png" id="1_vr2hl"]
[ext_resource type="Texture2D" uid="uid://wefqu5hr1r10" path="res://UserInterface/number_frame.png" id="2_g6gwe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1daj4"]
content_margin_left = 64.0
content_margin_top = 64.0
content_margin_right = 64.0
content_margin_bottom = 64.0
texture = ExtResource("1_vr2hl")

[sub_resource type="LabelSettings" id="LabelSettings_vr2hl"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6gwe"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_1daj4"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ulau2"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g6gwe"]
font_color = Color(0, 0, 0, 1)

[node name="Level_up_choice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6gwe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 900)
layout_mode = 2
size_flags_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1daj4")

[node name="VBoxContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Current Level"
label_settings = SubResource("LabelSettings_vr2hl")

[node name="CurrentLevel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_g6gwe")

[node name="CurrentLevelLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentLevel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Current XP:"
label_settings = SubResource("LabelSettings_ulau2")

[node name="CurrentXP" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentXP"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentStrength" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="StrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentStrength"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelupStrength" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_g6gwe")

[node name="LevelStrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupStrength"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Increase Strength"
label_settings = SubResource("LabelSettings_g6gwe")

[node name="CurrentEndurance" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="EnduranceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentEndurance"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelupEndurance" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_g6gwe")

[node name="LevelEnduranceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupEndurance"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Increase Endurance"
label_settings = SubResource("LabelSettings_g6gwe")

[node name="CurrentAgility" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="AgilityLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentAgility"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelupAgility" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_g6gwe")

[node name="LevelAgilityLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupAgility"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Increase Agility"
label_settings = SubResource("LabelSettings_g6gwe")

[node name="CurrentIntelligence" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="IntelligenceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentIntelligence"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelupIntelligence" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_g6gwe")

[node name="LevelIntelligenceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupIntelligence"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Increase Intelligence"
label_settings = SubResource("LabelSettings_g6gwe")
autowrap_mode = 2

[node name="CurrentSpirit" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="SpiritLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentSpirit"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1daj4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelupSpirit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_g6gwe")

[node name="LevelISpiritLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupSpirit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Increase Spirit"
label_settings = SubResource("LabelSettings_g6gwe")
autowrap_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupStrength" to="." method="strength_level_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupEndurance" to="." method="endurance_level_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupAgility" to="." method="agility_level_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupIntelligence" to="." method="intelligence_level_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/LevelupSpirit" to="." method="intelligence_level_up"]
